# aether

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  AGENTS.md  BUILD.bazel  CLAUDE.md  MODULE.bazel  Makefile  NOTICE  README.md  go.mod  go.sum
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml  conformance.yaml  e2e-agent.yaml  e2e-cloudmap.yaml  e2e-cni-server.yaml  e2e-dynamodb.yaml  e2e-etcd.yaml  e2e-xds-server.yaml  e2e.yaml  integration-cloudmap.yaml  integration-cni-server.yaml  integration-dynamodb.yaml  integration-etcd.yaml  integration-xds-server.yaml  proxy-pr.yml  (+6 more)
bazel/: configure_colima.sh  workspace_status.sh
bazel/envoy/: BUILD.bazel  extensions.bzl
bazel/format/: BUILD.bazel
bazel/go/: BUILD.bazel
bazel/llvm/: BUILD.bazel  extensions.bzl  version.bzl
bazel/llvm/platform/: BUILD.bazel
charts/: README.md
charts/aether/: BUILD.bazel  Chart.yaml  values.yaml
charts/aether/templates/: NOTES.txt  _helpers.tpl  agent-daemonset.yaml  agent-proxy-configmap.yaml  agent-proxy-daemonset.yaml  agent-proxy-opa-policy.yaml  agent-rbac.yaml  agent-secret.yaml  agent-serviceaccount.yaml  controller-clusterspiffeid.yaml  controller-deployment.yaml  controller-meshconfig.yaml  controller-rbac.yaml  controller-service.yaml  controller-serviceaccount.yaml  controller-webhook.yaml  edge-clusterspiffeid.yaml  edge-configmap.yaml  edge-defaultconfig.yaml  edge-deployment.yaml  edge-gateway.yaml  edge-gatewayclass.yaml  edge-httproute.yaml  edge-meshconfig.yaml  edge-namespace.yaml  edge-rbac.yaml  edge-service.yaml  edge-serviceaccount.yaml  mesh-dns-daemonset.yaml  namespace.yaml  registrar-deployment.yaml  registrar-rbac.yaml  registrar-service.yaml  registrar-serviceaccount.yaml
charts/agent/: BUILD.bazel  Chart.yaml  values.yaml
charts/agent/templates/: _helpers.tpl  configmap.yaml  daemonset.yaml  namespace.yaml  proxy.yaml  rbac.yaml  secret.yaml  serviceaccount.yaml
charts/controller/: BUILD.bazel  Chart.yaml  values.yaml
charts/controller/templates/: _helpers.tpl  deployment.yaml  meshconfig.yaml  namespace.yaml  rbac.yaml  service.yaml  serviceaccount.yaml  webhook.yaml
charts/crds/: BUILD.bazel  Chart.yaml  values.yaml
charts/crds/templates/: edgeconfig.yaml  edgeroute.yaml  httpfilter.yaml  meshconfig.yaml  virtualhost.yaml
charts/prober/: BUILD.bazel  Chart.yaml  values.yaml
charts/prober/templates/: _helpers.tpl  daemonset.yaml  namespace.yaml  serviceaccount.yaml
charts/registrar/: BUILD.bazel  Chart.yaml  values.yaml
charts/registrar/templates/: _helpers.tpl  deployment.yaml  namespace.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
cni/config/: BUILD.bazel  config.go  config_test.go
common/config/: BUILD.bazel  config.go  config_test.go
common/constants/: BUILD.bazel  annotations.go  endpoint.go  labels.go  namespaces.go  proxy.go  registry.go
common/constants/annotations/: BUILD.bazel  annotations.go
common/constants/labels/: BUILD.bazel  labels.go
common/constants/mesh/: BUILD.bazel  mesh.go
common/crdcheck/: BUILD.bazel  crdcheck.go
common/extensionfilter/: BUILD.bazel  extensionfilter.go  extensionfilter_test.go
common/file/: BUILD.bazel  file.go  file_test.go
common/gammaproject/: BUILD.bazel  project.go  project_test.go
common/log/: BUILD.bazel  fanout.go  log.go  log_test.go  named.go
common/manager/: BUILD.bazel  config.go  flags.go  logging.go  manager.go
common/referencegrant/: BUILD.bazel  referencegrant.go  referencegrant_test.go
common/retry/: BUILD.bazel  retry.go  retry_test.go
common/serviceref/: BUILD.bazel  serviceref.go  serviceref_test.go
constants/: BUILD.bazel  annotations.go  cni.go  endpoint.go  labels.go  node.go  registry.go
docs/: configuration.md  getting-started.md  registry-backend-evolution.md  runbook.md  workload-requirements.md
e2e/: Makefile  docker-compose.yaml  kind-cluster.yaml  multicluster_config.sh  multicluster_replicator.sh  multicluster_waypoint.sh
hack/: check-chart-version-bump.sh
hook/: BUILD.bazel  shutdown.go  shutdown_test.go
log/: BUILD.bazel  log.go  log_test.go
proxy/: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  envoy.bazelrc
proxy/bazel/: repositories.bzl
proxy/bazel/envoy/: repository.bzl
proxy/bazel/oci/: images.bzl
proxy/bazel/patches/: envoy-dynamic-modules-aarch64-objcopy.patch  envoy-rust-sdk-aarch64-libclang.patch
proxy/filters/http/aether_stats/: BUILD.bazel  Cargo.toml  README.md
proxy/filters/http/aether_stats/src/: lib.rs
proxy/filters/telemetry/: BUILD.bazel  Cargo.toml  README.md
proxy/filters/telemetry/patches/: BUILD.bazel  sdk_abi_header.patch
proxy/filters/telemetry/src/: lib.rs
proxy/integration/: BUILD.bazel  image.yaml
proxy/source/extensions/filters/http/aether_stats/: BUILD  aether_stats.cc  aether_stats.h  aether_stats.proto  aether_stats_integration_test.cc  aether_stats_test.cc  config.cc  config.h  tag_extraction_test.cc
registry/: BUILD.bazel  cloudmap.go  cni.go  cni_test.go  ddb.go  etcd.go  k8s.go  kubernets.go  registrar.go  registry.go  registrypod.go
registry/backend/: BUILD.bazel  backend.go
registry/export/: BUILD.bazel  export.go
registry/internal/cloudmap/: BUILD.bazel  attrs.go  attrs_test.go  cache.go  cache_test.go  client.go  cloudmap.go  cloudmap_test.go  fake_client_test.go  options.go
registry/internal/ddb/: BUILD.bazel  dynamodb.go  dynamodb_test.go
registry/internal/etcd/: BUILD.bazel  etcd.go  etcd_test.go
registry/internal/k8s/: BUILD.bazel  kubernetes.go  kubernetes_test.go
registry/internal/registrar/: BUILD.bazel  metrics.go  metrics_test.go  registrar.go  registrar_test.go
registry/registrarclient/: BUILD.bazel  registrarclient.go
registry/registrytest/: BUILD.bazel  contract.go
registry/types/: BUILD.bazel  types.go
scripts/: check-chart-version-bump.sh  ci-impacted-targets.sh
telemetry/: BUILD.bazel  healthz.go  telemetry.go
xds/: BUILD.bazel  callbacks.go  config.go  readiness.go  readiness_test.go  server.go  server_test.go  xds.go  xds_test.go
xds/cache/: BUILD.bazel  cache.go  hash.go
(+724 files in other folders)
