module(name = "aether")

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "protobuf", version = "34.1")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.51.0")

# Transitive dependency of rules_img pinned for Bazel 9 compatibility.
# Older versions (e.g. 0.10.1, pulled in via rules_img → rules_pkg) use the
# removed `incompatible_use_toolchain_transition` rule() kwarg.
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

# Transitive dependency pinned for Bazel 9 compatibility.
# Pulled in via protobuf → rules_jvm_external → rules_android
#              and protobuf → rules_kotlin → rules_android.
# Older version (0.6.4) fails to load CcInfo from rules_cc in android_local_test/attrs.bzl.
bazel_dep(name = "rules_android", version = "0.7.2")
bazel_dep(name = "rules_img", version = "0.3.11")
bazel_dep(name = "container_structure_test", version = "1.22.1")
bazel_dep(name = "protovalidate", version = "1.2.0")
bazel_dep(name = "aspect_rules_lint", version = "2.5.2")
bazel_dep(name = "rules_buf", version = "0.5.4")
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1.2")
bazel_dep(name = "rules_helm", version = "0.29.0")

# Rust toolchain for in-tree dynamic modules (see docs/proposals/008), plus a
# hermetic LLVM (clang/lld + glibc sysroots) that cross-compiles the proxy cdylib
# for amd64/arm64 and supplies libclang to the SDK bindgen build script. The LLVM
# toolchains are registered opt-in (only for //bazel/llvm/platform:linux_* via
# the :hermetic constraint), so the default host C++ toolchain used by the
# Go/protobuf builds is untouched — the same approach as the prior Zig setup.
bazel_dep(name = "rules_rust", version = "0.70.0")
bazel_dep(name = "toolchains_llvm", version = "1.7.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.2")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# https://github.com/google/cel-go/issues/1184
go_deps.gazelle_override(
    build_file_generation = "off",
    path = "cel.dev/expr",
)

# etcd packages have protobuf files that need special handling
go_deps.gazelle_override(
    build_file_generation = "on",
    directives = [
        "gazelle:proto disable",
    ],
    path = "go.etcd.io/etcd/api/v3",
)
go_deps.gazelle_override(
    build_file_generation = "on",
    directives = [
        "gazelle:proto disable",
    ],
    path = "go.etcd.io/etcd/server/v3",
)
go_deps.gazelle_override(
    build_file_generation = "on",
    directives = [
        "gazelle:proto disable",
    ],
    path = "go.etcd.io/raft/v3",
)

# spire-api-sdk has proto files with pre-generated Go code
go_deps.gazelle_override(
    build_file_generation = "on",
    directives = [
        "gazelle:proto disable",
    ],
    path = "github.com/spiffe/spire-api-sdk",
)
use_repo(
    go_deps,
    "build_buf_gen_go_bufbuild_protovalidate_protocolbuffers_go",
    "build_buf_go_protovalidate",
    "com_github_aws_aws_sdk_go_v2",
    "com_github_aws_aws_sdk_go_v2_config",
    "com_github_aws_aws_sdk_go_v2_credentials",
    "com_github_aws_aws_sdk_go_v2_feature_dynamodb_attributevalue",
    "com_github_aws_aws_sdk_go_v2_service_dynamodb",
    "com_github_blang_semver_v4",
    "com_github_cncf_xds_go",
    "com_github_containernetworking_cni",
    "com_github_envoyproxy_go_control_plane",
    "com_github_envoyproxy_go_control_plane_envoy",
    "com_github_fsnotify_fsnotify",
    "com_github_go_jose_go_jose_v4",
    "com_github_go_logr_logr",
    "com_github_google_renameio_v2",
    "com_github_grpc_ecosystem_go_grpc_middleware_v2",
    "com_github_klauspost_compress",
    "com_github_moby_spdystream",
    "com_github_mxk_go_flowrate",
    "com_github_pquerna_protoc_gen_dynamo",
    "com_github_spf13_cobra",
    "com_github_spiffe_go_spiffe_v2",
    "com_github_spiffe_spire_api_sdk",
    "com_github_stretchr_testify",
    "com_github_testcontainers_testcontainers_go",
    "com_github_testcontainers_testcontainers_go_modules_dynamodb",
    "com_github_testcontainers_testcontainers_go_modules_etcd",
    "com_github_vladimirvivien_gexe",
    "com_github_zeebo_errs",
    "in_gopkg_natefinch_lumberjack_v2",
    "io_etcd_go_etcd_client_v3",
    "io_etcd_go_etcd_server_v3",
    "io_k8s_api",
    "io_k8s_apimachinery",
    "io_k8s_client_go",
    "io_k8s_component_base",
    "io_k8s_cri_api",
    "io_k8s_sigs_controller_runtime",
    "io_k8s_sigs_e2e_framework",
    "io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc",
    "io_opentelemetry_go_contrib_instrumentation_runtime",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_exporters_otlp_otlpmetric_otlpmetricgrpc",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc",
    "io_opentelemetry_go_otel_exporters_prometheus",
    "io_opentelemetry_go_otel_metric",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_sdk_metric",
    "io_opentelemetry_go_otel_trace",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_sys",
    "org_golang_x_time",
    "org_uber_go_atomic",
    "org_uber_go_zap",
)

buf = use_extension("@rules_buf//buf:extensions.bzl", "buf")
buf.toolchains(version = "v1.67.0")
use_repo(buf, "rules_buf_toolchains")

# Hermetic Helm toolchain (downloads helm) plus a @helm//:helm host alias for
# `bazel run @helm//:helm -- ...`.
helm = use_extension("@rules_helm//helm:extensions.bzl", "helm")
helm.host_tools()
use_repo(helm, "helm", "helm_toolchains")

register_toolchains("@helm_toolchains//:all")

pull = use_repo_rule("@rules_img//img:pull.bzl", "pull")

pull(
    name = "distroless_static",
    digest = "sha256:e3f945647ffb95b5839c07038d64f9811adf17308b9121d8a2b87b6a22a80a39",
    layer_handling = "lazy",
    registry = "gcr.io",
    repository = "distroless/static-debian13",
    tag = "nonroot",
)

# --- Rust toolchains (in-tree dynamic modules; see docs/proposals/008) ---

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.83.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# Envoy artifacts — abi.h header + the @envoy_distroless proxy-image base, both
# version-pinned via ENVOY_VERSION (see //bazel/envoy:extensions.bzl).
envoy = use_extension("//bazel/envoy:extensions.bzl", "envoy")
use_repo(envoy, "envoy_abi_h", "envoy_distroless")

# Rust crate graph for the proxy dynamic modules (proposal 007), resolved from
# proxy/filters/telemetry's Cargo.toml/Cargo.lock — includes the Envoy SDK as a
# git dep (not vendored). Must use the rules_rust crate extension directly:
# crate_universe wires the rust toolchain's cargo/rustc into the generated repo,
# which a hand-wrapped crates_repository cannot reach. The SDK build script
# (bindgen) hard-codes ../../abi/abi.h, outside the crate package; the patch
# redirects it to AETHER_ABI_H, fed the fetched header via the main-repo alias
# //proxy/filters/telemetry:abi_h.
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.annotation(
    # Hermetic bindgen: the SDK build script parses abi.h with the hermetic LLVM
    # libclang + a hermetic glibc sysroot — no host clang/headers (see the patch).
    # Routed through the MAIN repo (//bazel/llvm) — the crate_universe-generated
    # SDK repo can't see external repos by apparent name. The clang resource +
    # libc++ headers come in via the (now default) LLVM cc toolchain that
    # cargo_build_script pulls in (re-supplying them here would collide on the
    # include/c++ dir). The amd64 sysroot tree IS supplied explicitly: the
    # toolchain only stages the cdylib *target* arch's sysroot, so on the arm64
    # image leg the amd64 sysroot bindgen always uses would otherwise be absent.
    build_script_data = [
        "@@//proxy/filters/telemetry:abi_h",
        "@@//bazel/llvm:libclang",  # libclang soname chain present in the sandbox
        "@@//bazel/llvm:libclang_so",  # the file LIBCLANG_PATH points at
        "@@//bazel/llvm:sysroot_amd64",  # full amd64 sysroot tree (toolchain only
        # stages the cdylib target arch's sysroot; bindgen always uses amd64)
        "@@//bazel/llvm:sysroot_amd64_marker",  # sysroot-root marker for --sysroot
    ],
    build_script_env = {
        "AETHER_ABI_H": "$(execpath @@//proxy/filters/telemetry:abi_h)",
        # clang-sys accepts a file path for LIBCLANG_PATH — pins libclang hermetically.
        "LIBCLANG_PATH": "$(execpath @@//bazel/llvm:libclang_so)",
        # The patch three-parents this marker to derive --sysroot.
        "AETHER_SYSROOT": "$(execpath @@//bazel/llvm:sysroot_amd64_marker)",
        # Pin bindgen's clang target to the (x86_64) sysroot we feed via --sysroot.
        # cargo_build_script otherwise sets TARGET to the cdylib's arch (e.g.
        # aarch64 for the arm64 image leg), making clang look for an aarch64
        # multiarch dir inside the amd64 sysroot (bits/libc-header-start.h not
        # found). The dynamic-module ABI is arch-neutral (LP64), so x86_64
        # bindings are valid for the arm64 .so too. Appended last, so it wins.
        "BINDGEN_EXTRA_CLANG_ARGS": "--target=x86_64-unknown-linux-gnu",
    },
    crate = "envoy-proxy-dynamic-modules-rust-sdk",
    patch_args = ["-p1"],
    patches = ["@@//proxy/filters/telemetry/patches:sdk_abi_header.patch"],
)
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//proxy/filters/telemetry:Cargo.lock",
    manifests = ["//proxy/filters/telemetry:Cargo.toml"],
)
use_repo(crate, "crates")

# Hermetic glibc sysroots (chromium bullseye, glibc 2.31 <= the proxy distroless
# base) for the LLVM toolchain and the SDK bindgen — see //bazel/llvm.
sysroots = use_extension("//bazel/llvm:extensions.bzl", "sysroots")
use_repo(sysroots, "sysroot_linux_amd64", "sysroot_linux_arm64")

# Hermetic LLVM C/C++ toolchain (clang 18.1.8 — matches Envoy's hermetic pin;
# keep in lockstep with //bazel/llvm:version.bzl LLVM_VERSION), registered as the
# default toolchain for host + linux amd64/arm64, each with its matching glibc
# sysroot. This is the repo's single C/C++ toolchain (it replaced Zig): the Go
# and protobuf builds use no cgo / cc_* targets, so making clang the default is
# transparent to them, while the proxy cdylib cross-compiles against an
# old-enough glibc to load on the Envoy distroless base.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "18.1.8",
    # The LLVM dist ships only host-arch libc++.a, so its default static libc++
    # can't satisfy a cross-compile; point the C++ stdlib at the per-arch sysroot
    # libstdc++ instead. The cdylib is pure Rust, so --as-needed drops libstdc++
    # entirely anyway — the resulting .so needs only libgcc_s/libc/pthread (max
    # GLIBC 2.18), matching the prior Zig output.
    stdlib = {"": "dynamic-stdc++"},
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@sysroot_linux_amd64//:sysroot",
    targets = ["linux-x86_64"],
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@sysroot_linux_arm64//:sysroot",
    targets = ["linux-aarch64"],
)
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

register_toolchains("@llvm_toolchain//:all")
