module(name = "aether")

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "protobuf", version = "34.1")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.51.0")

# Transitive dependency of rules_img pinned for Bazel 9 compatibility.
# Older versions (e.g. 0.10.1, pulled in via rules_img → rules_pkg) use the
# removed `incompatible_use_toolchain_transition` rule() kwarg.
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

# Transitive dependency pinned for Bazel 9 compatibility.
# Pulled in via protobuf → rules_jvm_external → rules_android
#              and protobuf → rules_kotlin → rules_android.
# Older version (0.6.4) fails to load CcInfo from rules_cc in android_local_test/attrs.bzl.
bazel_dep(name = "rules_android", version = "0.7.2")
bazel_dep(name = "rules_img", version = "0.3.11")
bazel_dep(name = "container_structure_test", version = "1.22.1")
bazel_dep(name = "protovalidate", version = "1.2.0")
bazel_dep(name = "aspect_rules_lint", version = "2.5.2")
bazel_dep(name = "rules_buf", version = "0.5.4")
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1.2")
bazel_dep(name = "rules_helm", version = "0.29.0")

# BuildBuddy RBE toolchain — provides the hosted-executor platform and a matching
# Ubuntu CC toolchain for remote execution (--config=remote). aether is pure-Go,
# but RBE actions still resolve a CC toolchain for the exec platform, which this
# registers (see the extension block below).
bazel_dep(name = "toolchains_buildbuddy", version = "0.0.4")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.2")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# https://github.com/google/cel-go/issues/1184
go_deps.gazelle_override(
    build_file_generation = "off",
    path = "cel.dev/expr",
)

# etcd packages have protobuf files that need special handling
go_deps.gazelle_override(
    build_file_generation = "on",
    directives = [
        "gazelle:proto disable",
    ],
    path = "go.etcd.io/etcd/api/v3",
)
go_deps.gazelle_override(
    build_file_generation = "on",
    directives = [
        "gazelle:proto disable",
    ],
    path = "go.etcd.io/etcd/server/v3",
)
go_deps.gazelle_override(
    build_file_generation = "on",
    directives = [
        "gazelle:proto disable",
    ],
    path = "go.etcd.io/raft/v3",
)

# spire-api-sdk has proto files with pre-generated Go code
go_deps.gazelle_override(
    build_file_generation = "on",
    directives = [
        "gazelle:proto disable",
    ],
    path = "github.com/spiffe/spire-api-sdk",
)
use_repo(
    go_deps,
    "build_buf_gen_go_bufbuild_protovalidate_protocolbuffers_go",
    "build_buf_go_protovalidate",
    "com_github_aws_aws_sdk_go_v2",
    "com_github_aws_aws_sdk_go_v2_config",
    "com_github_aws_aws_sdk_go_v2_credentials",
    "com_github_aws_aws_sdk_go_v2_feature_dynamodb_attributevalue",
    "com_github_aws_aws_sdk_go_v2_service_dynamodb",
    "com_github_blang_semver_v4",
    "com_github_cncf_xds_go",
    "com_github_containernetworking_cni",
    "com_github_envoyproxy_go_control_plane",
    "com_github_envoyproxy_go_control_plane_envoy",
    "com_github_fsnotify_fsnotify",
    "com_github_go_jose_go_jose_v4",
    "com_github_go_logr_logr",
    "com_github_google_nftables",
    "com_github_google_renameio_v2",
    "com_github_grpc_ecosystem_go_grpc_middleware_v2",
    "com_github_klauspost_compress",
    "com_github_moby_spdystream",
    "com_github_mxk_go_flowrate",
    "com_github_pquerna_protoc_gen_dynamo",
    "com_github_spf13_cobra",
    "com_github_spiffe_go_spiffe_v2",
    "com_github_spiffe_spire_api_sdk",
    "com_github_stretchr_testify",
    "com_github_testcontainers_testcontainers_go",
    "com_github_testcontainers_testcontainers_go_modules_dynamodb",
    "com_github_testcontainers_testcontainers_go_modules_etcd",
    "com_github_vladimirvivien_gexe",
    "com_github_zeebo_errs",
    "in_gopkg_natefinch_lumberjack_v2",
    "io_etcd_go_etcd_client_v3",
    "io_etcd_go_etcd_server_v3",
    "io_k8s_api",
    "io_k8s_apimachinery",
    "io_k8s_client_go",
    "io_k8s_component_base",
    "io_k8s_cri_api",
    "io_k8s_sigs_controller_runtime",
    "io_k8s_sigs_e2e_framework",
    "io_k8s_sigs_gateway_api",
    "io_k8s_sigs_yaml",
    "io_opentelemetry_go_contrib_bridges_otelslog",
    "io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc",
    "io_opentelemetry_go_contrib_instrumentation_runtime",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_exporters_otlp_otlplog_otlploggrpc",
    "io_opentelemetry_go_otel_exporters_otlp_otlpmetric_otlpmetricgrpc",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc",
    "io_opentelemetry_go_otel_exporters_prometheus",
    "io_opentelemetry_go_otel_metric",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_sdk_log",
    "io_opentelemetry_go_otel_sdk_metric",
    "io_opentelemetry_go_otel_trace",
    "io_opentelemetry_go_proto_otlp",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_sys",
    "org_golang_x_time",
    "org_uber_go_atomic",
    "org_uber_go_zap",
)

buf = use_extension("@rules_buf//buf:extensions.bzl", "buf")
buf.toolchains(version = "v1.71.0")
use_repo(buf, "rules_buf_toolchains")

# Hermetic Helm toolchain (downloads helm) plus a @helm//:helm host alias for
# `bazel run @helm//:helm -- ...`.
helm = use_extension("@rules_helm//helm:extensions.bzl", "helm")
helm.host_tools()
use_repo(helm, "helm", "helm_toolchains")

register_toolchains("@helm_toolchains//:all")

# BuildBuddy RBE: generates @buildbuddy_toolchain with the hosted-executor
# platform (//:platform_linux_x86_64) and CC toolchain (//:ubuntu_cc_toolchain),
# both wired in via --config=remote in .bazelrc. Ubuntu 22.04 image so the
# hermetic Go SDK + prebuilt buf/buildifier/shellcheck/helm tools run against a
# modern glibc.
buildbuddy = use_extension("@toolchains_buildbuddy//:extensions.bzl", "buildbuddy")
buildbuddy.platform(buildbuddy_container_image = "UBUNTU22_04_IMAGE")
use_repo(buildbuddy, "buildbuddy_toolchain")

pull = use_repo_rule("@rules_img//img:pull.bzl", "pull")

pull(
    name = "distroless_static",
    digest = "sha256:e3f945647ffb95b5839c07038d64f9811adf17308b9121d8a2b87b6a22a80a39",
    layer_handling = "lazy",
    registry = "gcr.io",
    repository = "distroless/static-debian13",
    tag = "nonroot",
)

# NOTE: the custom aether-proxy image (distroless/cc base + custom Envoy with the
# compiled-in C++ aether_stats extension) and all its build wiring moved to the
# separate //proxy workspace (proposals 010/012), which is listed in
# //.bazelignore. aether no longer builds the proxy image; the chart references
# the published image (see charts/aether/values.yaml). That move took the only
# C/C++ in the repo with it — aether now has no cgo / cc_* targets (zero C++
# build actions), so it carries no C/C++ toolchain: Go and protobuf resolve the
# auto-detected host cc toolchain for the rare analysis-time reference. The
# hermetic LLVM toolchain, glibc sysroots, and //bazel/llvm bindgen plumbing that
# served the old proxy cdylib were removed with it.
