load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "constants",
    srcs = [
        "annotations.go",
        "cni.go",
        "endpoint.go",
        "labels.go",
        "registry.go",
    ],
    importpath = "github.com/bpalermo/aether/constants",
    visibility = ["//visibility:public"],
)
