load("@container_structure_test//:defs.bzl", "container_structure_test")
load("@envoy//bazel:envoy_build_system.bzl", "envoy_cc_binary")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

# Custom aether Envoy. The compiled-in extension set comes from
# //bazel/extension_config (extensions_build_config.bzl). Our own C++/Rust
# compiled extensions get appended to AETHER_EXTENSIONS as the proposal-010
# follow-up; today it's a vanilla custom build (same extensions as upstream).
AETHER_EXTENSIONS = []

envoy_cc_binary(
    name = "envoy",
    repository = "@envoy",
    deps = AETHER_EXTENSIONS + [
        "@envoy//source/exe:envoy_main_entry_lib",
    ],
)

# The custom Envoy binary at /usr/local/bin/envoy.
pkg_tar(
    name = "envoy_tar",
    srcs = [":envoy"],
    extension = "tar.gz",
    mode = "0755",
    owner = "0.0",
    package_dir = "/usr/local/bin/",
    tags = ["manual"],
)

# Custom aether-proxy image: distroless/cc base + the custom Envoy binary. The
# aether_stats dynamic module is intentionally not baked in yet (filter
# customization is unwired until the proposal-010 follow-up); this is a vanilla
# custom Envoy image, which is the current build goal.
oci_image(
    name = "image",
    base = "@distroless_cc",
    entrypoint = ["/usr/local/bin/envoy"],
    tars = [
        ":envoy_tar",
    ],
    visibility = ["//visibility:public"],
    workdir = "/",
)

oci_push(
    name = "push",
    image = ":image",
    remote_tags = ["dev"],
    repository = "ghcr.io/bpalermo/aether/aether-proxy",
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["ghcr.io/bpalermo/aether/aether-proxy:latest"],
)

container_structure_test(
    name = "image_test",
    configs = ["//integration:image.yaml"],
    image = ":image",
    tags = ["manual"],
)
