load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "registry",
    srcs = [
        "cni.go",
        "ddb.go",
        "etcd.go",
        "k8s.go",
        "registrar.go",
        "registry.go",
    ],
    importpath = "github.com/bpalermo/aether/registry",
    visibility = ["//visibility:public"],
    deps = [
        "//api/aether/cni/v1:cni",
        "//api/aether/registry/v1:registry",
        "//common/constants",
        "//registry/export",
        "//registry/internal/ddb",
        "//registry/internal/etcd",
        "//registry/internal/k8s",
        "//registry/internal/registrar",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@io_k8s_sigs_controller_runtime//pkg/client",
    ],
)

go_test(
    name = "registry_test",
    srcs = ["cni_test.go"],
    embed = [":registry"],
    deps = [
        "//api/aether/cni/v1:cni",
        "//api/aether/registry/v1:registry",
        "//common/constants",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
