load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "registry",
    srcs = [
        "cni.go",
        "registry.go",
    ],
    importpath = "github.com/bpalermo/aether/registry",
    visibility = ["//visibility:public"],
    deps = [
        "//api/aether/cni/v1:cni",
        "//api/aether/registry/v1:registry",
        "//common/constants",
        "//common/serviceref",
        "//registry/export",
    ],
)

go_test(
    name = "registry_test",
    srcs = ["cni_test.go"],
    embed = [":registry"],
    deps = [
        "//api/aether/cni/v1:cni",
        "//api/aether/registry/v1:registry",
        "//common/constants",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
