# Envoy artifact fetches live in extensions.bzl (see //bazel/envoy:extensions.bzl).

# The official Envoy release binary for the target arch, baked into //proxy:image.
# select() resolves per-arch under the image_index platform transition.
filegroup(
    name = "envoy_bin",
    srcs = select({
        "@platforms//cpu:x86_64": ["@envoy_bin_amd64//file"],
        "@platforms//cpu:aarch64": ["@envoy_bin_arm64//file"],
    }),
    visibility = ["//visibility:public"],
)
